--- a/package.json
+++ b/package.json
@@ -10,12 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "aos": "^2.3.4",
     "localforage": "^1.10.0",
     "match-sorter": "^8.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-helmet-async": "^2.0.5",
-    "react-icons": "^5.3.0",
+    "react-icons": "^5.4.0",
     "react-rating-stars-component": "^2.2.0",
     "react-router-dom": "^7.0.1",
     "react-toastify": "^10.0.6",
